--- a/_config.yml
+++ b/_config.yml
@@ -5,18 +5,18 @@ permalink:           pretty
 #relative_permalinks: true
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
+title:               Shobhit's Blog
+tagline:             'Built using jekyll'
 description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+url:                 shobhitagarwal1612.github.io
 baseurl:             ''
 paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
+  name:              Shobhit Agarwal
   url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  email:             shobhitagarwal1612@gmail.com
 
 # Custom vars
 version:             1.0.0
