--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ permalink:           pretty
 
 # Setup
 title:               Shobhit's Blog
-tagline:             'Built using jekyll'
+tagline:             'Android and Python Developer'
 description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:                 shobhitagarwal1612.github.io
 baseurl:             ''
