--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@ permalink:           pretty
 #relative_permalinks: true
 
 # Setup
-title:               Shobhit's Blog
+title:               Shobhit Agarwal
 tagline:             'Android and Python Developer'
 description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 shobhitagarwal1612.github.io
+url:                 https://www.github.com/shobhitagarwal1612
 baseurl:             ''
 paginate:            5
 
