--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:           pretty
 # Setup
 title:               Shobhit Agarwal
 tagline:             'Android and Python Developer'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+description:         'Open Source Lover'
 url:                 https://www.github.com/shobhitagarwal1612
 baseurl:             ''
 paginate:            5
