Adds github projects url

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink:           pretty
 #relative_permalinks: true
 
 # Setup
-title:               Shobhit Agarwal
+title:               Shobhit's Blog
 tagline:             'Android and Python Developer'
 description:         'Open Source Lover'
 url:                 https://www.github.com/shobhitagarwal1612
